dataset1235/2025-2/2947369575/users/3893556986/executions/3873599344_4190502342.log
== SUBMISSION (2025-08-20 22:50:34)
-- CODE: 
print(4/180)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
---- user output:
0.022222222222222223
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
---- user output:
0.022222222222222223
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 22:51:18)
-- CODE: 
print(180/4
  
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
-- ERROR:
File "XXXX", line 1
    print(180/4
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
-- ERROR:
File "XXXX", line 1
    print(180/4
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 22:51:27)
-- CODE: 
print(180/4)
  
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
---- user output:
45.0
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
---- user output:
45.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
